--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Il mio sito web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://localhost:8000">
-    <meta property="og:image" content="https://www.canva.com/design/DAGKSDBQej0/70S90vlYJ73nbAn-ivexFg/view?utm_content=DAGKSDBQej0&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+    <meta property="og:image" content="https://github.com/KateB-creator/il-mio-sito-web/blob/main/katiuscia%20balia.png?raw=true">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap- icons@1.8.1/font/bootstrap-icons.css">
