rimosso slash da assets

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,6 @@
     </section>
 </main>
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script src="/assets/JS/contact.js"></script>
+<script src="assets/JS/contact.js"></script>
 </body>
 </html>
