--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                     Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
             </div>
             <div class="hotel-image">
-                <img src="/assets/img/hotelpomelia.jpg" alt="pagina sito web">
+                <img src="assets/img/hotelpomelia.jpg" alt="pagina sito web">
             </div>
         </div>
     </div>                
