--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Il mio sito web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://localhost:8000">
-    <meta property="og:image" content="https://github.com/KateB-creator/il-mio-sito-web/blob/main/katiuscia%20balia.png?raw=true">
+    <meta property="og:image" content="katiuscia balia.pnggit pull origin main">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap- icons@1.8.1/font/bootstrap-icons.css">
@@ -43,13 +43,13 @@
 
     <div class="social-links">
         <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank">
-            <img src="/assets/img/start2impact.png" alt="start2impact">
+            <img src="assets/img/start2impact.png" alt="start2impact">
         </a>
         <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244" target="_blank">
-            <img src="/assets/img/linkedin.png" alt="linkedin">
+            <img src="assets/img/linkedin.png" alt="linkedin">
         </a>
         <a href="https://www.instagram.com/katiuscia_balia/" target="_blank">
-            <img src="/assets/img/instagram.png" alt="Instagram">
+            <img src="assets/img/instagram.png" alt="Instagram">
         </a>
     </div>
 </nav>
