--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Il mio sito web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://localhost:8000">
-    <meta property="og:image" content="katiuscia balia.pnggit pull origin main">
+    <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/0bf992ca99b40de245fc7b44f253bf085c095386/katiuscia%20balia.png">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap- icons@1.8.1/font/bootstrap-icons.css">
