Aggiornamento della pagina index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <a href="https://www.instagram.com/katiuscia_balia/" target="_blank">
             <img src="assets/img/instagram.png" alt="Instagram">
         </a>
+
+        <a href="https://github.com/KateB-creator/il-mio-sito-web" target="_blank">
+            <img src="assets/img/githubhomepage.png" alt="Github">
+        </a>
     </div>
 </nav>
 <footer>
