Aggiornamento della pagina index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta property="og:title" content="Il mio sito web">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://localhost:8000">
+    <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
     <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/0bf992ca99b40de245fc7b44f253bf085c095386/katiuscia%20balia.png">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
