modifica di tutto il progetto

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,14 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">I miei progetti</a></li>
+                <li><a href="contact.html">Contatti</a></li>
+            </ul>
+            <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
+        </nav>
         <h1 class="special-font">I MIEI PROGETTI</h1>
         <nav class="social-links">
             <ul>
