--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,16 @@
     <title>Contatti - Balia Katiuscia</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">I miei progetti</a></li>
+                <li><a href="contact.html">Contatti</a></li>
+            </ul>
+            <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
+        </nav>
+    </header>
 <main>
     <section id="contact">
         <h1>Inviami un messaggio</h1>
