--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta property="og:title" content="Il mio sito web">
@@ -9,13 +9,18 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/0bf992ca99b40de245fc7b44f253bf085c095386/katiuscia%20balia.png">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap- icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
     <title>Balia Katiuscia</title>
 </head>
 <body>
     <header>
         <nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">I miei progetti</a></li>
@@ -37,14 +42,14 @@
             Col tempo, il mio interesse si è spostato verso lo sviluppo web e delle app, riconoscendo il loro potenziale impatto positivo sulla società. Per questo, mi sono iscritta al master in full stack developer di Star2Impact.
             
             Sono entusiasta di iniziare la mia nuova carriera come sviluppatrice web e app, e grata per l'opportunità di creare prodotti digitali significativi. Continuo a imparare ogni giorno e sono curiosa di scoprire cosa mi riserva il futuro.
-            </p>
+        </p>
 
-            <section class="images">
-                <img src="assets/img/education.png" alt="education" class="extra-image">
-                <img src="assets/img/abilità-personali.png" alt="abilita" class="extra-image">
-            </section>
+        <section class="images">
+            <img src="assets/img/education.png" alt="education" class="extra-image">
+            <img src="assets/img/abilità-personali.png" alt="abilita" class="extra-image">
+        </section>
        
-        <section class="skills">
+        <section class="SKILLS">
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-item"><img src="assets/img/sass.png" alt="Skill 1"></div>
@@ -52,7 +57,6 @@
                 <div class="skill-item"><img src="assets/img/bootstrap.png" alt="Skill 3"></div>
                 <div class="skill-item"><img src="assets/img/html.png" alt="Skill 4"></div>
                 <div class="skill-item"><img src="assets/img/CSS.png" alt="Skill 4"></div>
-                <!-- Aggiungi altre immagini di skill come necessario -->
             </div>
         </section>
         <section class="social">
