--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/JS/index.js"></script>
 </body>
 </html>
