--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="portfolio.html">I miei progetti</a></li>
                 <li><a href="contact.html">Contatti</a></li>
             </ul>
-            <a href="curriculum.pdf" class="btn-download" download>Scarica CV</a>
+            <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
     </header>
     <main>
@@ -56,15 +56,16 @@
                 <div class="skill-item"><img src="assets/img/git.png" alt="Skill 2"></div>
                 <div class="skill-item"><img src="assets/img/bootstrap.png" alt="Skill 3"></div>
                 <div class="skill-item"><img src="assets/img/html.png" alt="Skill 4"></div>
-                <div class="skill-item"><img src="assets/img/CSS.png" alt="Skill 4"></div>
+                <div class="skill-item"><img src="assets/img/CSS.png" alt="Skill 5"></div>
+                <div class="skill-item"><img src="assets/img/github.png" alt="Skill 6"></div>
             </div>
         </section>
         <section class="social">
             <div class="social-container">
-                <a href="https://www.facebook.com" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
-                <a href="https://www.twitter.com" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
-                <a href="https://www.linkedin.com" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram"></a>
+                <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
+                <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram"></a>
             </div>
         </section>
     </main>
