--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Il mio portfolio</title>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/SCSS/portfolio.css">
+    <link rel="stylesheet" href="assets/CSS/potfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
 </head>
@@ -37,8 +37,13 @@
         <div class="item">
             <div class="hotel-content">
                 <h2>Progetto Start2impact - Travel</h2>
-                <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia...</p>
-                <p>Nel progetto per l'Hotel Pomelia, mi sono occupata della creazione del logo e dello sfondo del sito web...</p>
+                <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia. 
+                    Il progetto ha incluso la definizione della vision e mission dell'hotel, la descrizione della sua storia e dei valori familiari, e la presentazione delle innovazioni ecologiche introdotte.
+                    Ho evidenziato l'uso di energia rinnovabile, l'arredamento sostenibile e i servizi offerti, tra cui la ristorazione a km 0 e le attività organizzate per gli ospiti. 
+                    Ho inoltre sottolineato l'impegno dell'hotel nel turismo sostenibile e il suo status di prima Società Benefit in Sicilia.</p>
+                   <p> Nel progetto per l'Hotel Pomelia, mi sono occupata della creazione del logo e dello sfondo del sito web, realizzati attraverso Canva con un design ideato personalmente. 
+                    Il logo riflette l'essenza dell'hotel come ecostruttura e punto di riferimento per il turismo sostenibile in Sicilia, mentre lo sfondo è stato pensato per armonizzarsi con l'atmosfera naturale e accogliente della struttura. 
+                    Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
             </div>
             <div class="hotel-image">
                 <img src="assets/img/hotelpomelia.jpg" alt="pagina sito web">
