mofica codici css portfolio contact e styles

--- a/index.html
+++ b/index.html
@@ -30,19 +30,10 @@
         </nav>
     </header>
     <main>
-        <div class="profile-container">
-            <img src="assets/img/foto-profilo.jpg" alt="Profilo" class="profile-image">
-        </div>
-        <h1>Balia Katiuscia</h1>
-        <p>Full stack developer</p>
 
-        <h2>About me</h2>
-        <p>Ho iniziato la mia carriera come progettista CADCAM dentale, attratta dalla possibilità di usare la tecnologia per migliorare la vita delle persone. In questo ruolo, ho acquisito solide competenze in progettazione 3D e produzione.
-
-            Col tempo, il mio interesse si è spostato verso lo sviluppo web e delle app, riconoscendo il loro potenziale impatto positivo sulla società. Per questo, mi sono iscritta al master in full stack developer di Star2Impact.
-            
-            Sono entusiasta di iniziare la mia nuova carriera come sviluppatrice web e app, e grata per l'opportunità di creare prodotti digitali significativi. Continuo a imparare ogni giorno e sono curiosa di scoprire cosa mi riserva il futuro.
-        </p>
+        <div class="hero-image">
+            <img src="assets/img/aboutme.png" alt="Immagine Hero" class="centered-image">
+        </div> 
 
         <section class="images">
             <img src="assets/img/education.png" alt="education" class="extra-image">
@@ -60,6 +51,38 @@
                 <div class="skill-item"><img src="assets/img/github.png" alt="Skill 6"></div>
             </div>
         </section>
+        <section class="hobbies">
+            <h2>I miei hobby</h2>
+            <p>Oltre a dedicarmi alla programmazione, mi dedico a diversi hobby che alimentano la mia creatività e passione.</p>
+            <div class="hobbies-container">
+                <div class="hobby-item">
+                    <img src="assets/img/hobby1.jpg" alt="Hobby 1">
+                    <p>Descrizione del hobby 1.</p>
+                </div>
+                <div class="hobby-item">
+                    <img src="assets/img/hobby2.jpg" alt="Hobby 2">
+                    <p>Descrizione del hobby 2.</p>
+                </div>
+                <div class="hobby-item">
+                    <img src="assets/img/hobby3.jpg" alt="Hobby 3">
+                    <p>Descrizione del hobby 3.</p>
+                </div>
+                <!-- Aggiungi altre immagini dei tuoi hobby qui -->
+            </div>
+        </section>
+
+        <section class="follow-us">
+            <h2>Seguimi sui miei canali creativi!</h2>
+            <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
+            <section class="follow-us">
+                <h2>Seguimi sui miei canali creativi!</h2>
+                <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
+                <div class="social-links">
+                    <a href="https://www.tiktok.com/@tuo_username" target="_blank">TikTok</a>
+                    <a href="https://www.instagram.com/tuo_username/" target="_blank">Instagram</a>
+                </div>
+            </section>
+        
         <section class="social">
             <div class="social-container">
                 <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
