--- a/portfolio.html
+++ b/portfolio.html
@@ -24,32 +24,27 @@
             </ul>
             <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
-        <h1 class="special-font">I MIEI PROGETTI</h1>
-        <nav class="social-links">
-            <ul>
-                <li><a href="https://www.instagram.com/katiuscia_balia/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/katiuscia-balia-078b82244" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank"><i class="fas fa-rocket"></i></a></li>
-            </ul>
-        </nav>
     </header>
-    <div class="container">
-        <div class="item">
-            <div class="hotel-content">
-                <h2>Progetto Start2impact - Travel</h2>
-                <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia. 
-                    Il progetto ha incluso la definizione della vision e mission dell'hotel, la descrizione della sua storia e dei valori familiari, e la presentazione delle innovazioni ecologiche introdotte.
-                    Ho evidenziato l'uso di energia rinnovabile, l'arredamento sostenibile e i servizi offerti, tra cui la ristorazione a km 0 e le attività organizzate per gli ospiti. 
-                    Ho inoltre sottolineato l'impegno dell'hotel nel turismo sostenibile e il suo status di prima Società Benefit in Sicilia.</p>
-                   <p> Nel progetto per l'Hotel Pomelia, mi sono occupata della creazione del logo e dello sfondo del sito web, realizzati attraverso Canva con un design ideato personalmente. 
-                    Il logo riflette l'essenza dell'hotel come ecostruttura e punto di riferimento per il turismo sostenibile in Sicilia, mentre lo sfondo è stato pensato per armonizzarsi con l'atmosfera naturale e accogliente della struttura. 
-                    Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
-            </div>
-            <div class="hotel-image">
-                <img src="assets/img/hotelpomelia.jpg" alt="pagina sito web">
+    <main>
+        <h1 class="special-font">I MIEI PROGETTI</h1>  
+        <div class="container">
+            <div class="item">
+                <div class="hotel-content">
+                    <h2>Progetto Start2impact - Travel</h2>
+                    <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia. 
+                        Il progetto ha incluso la definizione della vision e mission dell'hotel, la descrizione della sua storia e dei valori familiari, e la presentazione delle innovazioni ecologiche introdotte.
+                        Ho evidenziato l'uso di energia rinnovabile, l'arredamento sostenibile e i servizi offerti, tra cui la ristorazione a km 0 e le attività organizzate per gli ospiti. 
+                        Ho inoltre sottolineato l'impegno dell'hotel nel turismo sostenibile e il suo status di prima Società Benefit in Sicilia.</p>
+                       <p> Nel progetto per l'Hotel Pomelia, mi sono occupata della creazione del logo e dello sfondo del sito web, realizzati attraverso Canva con un design ideato personalmente. 
+                        Il logo riflette l'essenza dell'hotel come ecostruttura e punto di riferimento per il turismo sostenibile in Sicilia, mentre lo sfondo è stato pensato per armonizzarsi con l'atmosfera naturale e accogliente della struttura. 
+                        Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
+                </div>
+                <div class="hotel-image">
+                    <img src="assets/img/hotelpomelia.jpg" alt="pagina sito web">
+                </div>
             </div>
         </div>
-    </div>                
+    </main>
     <footer>
         <p>&copy; 2024 Portfolio di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
