--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/styles.css">
     <title>Balia Katiuscia</title>
 </head>
@@ -29,11 +30,25 @@
             <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
     </header>
-    <main>
 
-        <div class="hero-image">
-            <img src="assets/img/aboutme.png" alt="Immagine Hero" class="centered-image">
-        </div> 
+    <main>
+        <div class="hero-container">
+            <div class="hero-image">
+                <img src="assets/img/foto-profilo.jpeg" alt="La mia foto" class="left-image">
+            </div>
+            <div class="hero-description">
+                <h1>Katiuscia Balia</h1>
+                <p>Studentessa in full stack development.</p>
+                <h2>About me!</h2>
+                <p>Ho iniziato la mia carriera come progettista CADCAM dentale, attratta dalla possibilità di usare la tecnologia per migliorare la vita delle persone.
+                    <p>In questo ruolo, ho acquisito solide competenze in progettazione 3D e produzione.
+                    Col tempo, il mio interesse si è spostato verso lo sviluppo web e delle app, 
+                    riconoscendo il loro potenziale impatto positivo sulla società.</p>
+                    <p> Per questo, mi sono iscritta al master in full stack developer di Star2Impact.
+                    Sono entusiasta di iniziare la mia nuova carriera come sviluppatrice web e app, e grata per l'opportunità di creare prodotti digitali significativi. 
+                    Continuo a imparare ogni giorno e sono curiosa di scoprire cosa mi riserva il futuro.</p>
+            </div>
+        </div>
 
         <section class="images">
             <img src="assets/img/education.png" alt="education" class="extra-image">
@@ -75,8 +90,6 @@
             <h2>Seguimi sui miei canali creativi!</h2>
             <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
             <section class="follow-us">
-                <h2>Seguimi sui miei canali creativi!</h2>
-                <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
                 <div class="social-links">
                     <a href="https://www.tiktok.com/@tuo_username" target="_blank">TikTok</a>
                     <a href="https://www.instagram.com/tuo_username/" target="_blank">Instagram</a>
@@ -92,6 +105,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
