--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,20 @@
             </form>
         </section>
     </main>
+
+        <section class="social">
+            <div class="social-container">
+                <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
+                <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram"></a>
+            </div>
+        </section>
+    
+    <footer>
+        <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
+    </footer>
+
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="assets/JS/contact.js"></script>
     <script>
