--- a/index.html
+++ b/index.html
@@ -89,19 +89,13 @@
         <section class="follow-us">
             <h2>Seguimi sui miei canali creativi!</h2>
             <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
-            <section class="follow-us">
-                <div class="social-links">
-                    <a href="https://www.tiktok.com/@tuo_username" target="_blank">TikTok</a>
-                    <a href="https://www.instagram.com/tuo_username/" target="_blank">Instagram</a>
-                </div>
-            </section>
-        
-        <section class="social">
-            <div class="social-container">
-                <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
-                <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
-                <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram"></a>
+            <div class="social-links">
+                <a href="https://www.tiktok.com/@tuo_username" target="_blank">
+                    <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon">
+                </a>
+                <a href="https://www.instagram.com/tuo_username/" target="_blank">
+                    <img src="assets/img/instagramcreativo.png" alt="Instagram" class="social-icon">
+                </a>
             </div>
         </section>
     </main>
