--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/styles.css">
     <title>Balia Katiuscia</title>
@@ -34,7 +35,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-image">
-                <img src="assets/img/foto-profilo.jpeg" alt="La mia foto" class="left-image">
+                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image">
             </div>
             <div class="hero-description">
                 <h1>Katiuscia Balia</h1>
@@ -69,31 +70,46 @@
         <section class="hobbies">
             <h2>I miei hobby</h2>
             <p>Oltre a dedicarmi alla programmazione, mi dedico a diversi hobby che alimentano la mia creatività e passione.</p>
-            <div class="hobbies-container">
-                <div class="hobby-item">
-                    <img src="assets/img/hobby1.jpg" alt="Hobby 1">
-                    <p>Descrizione del hobby 1.</p>
+            <div id="hobbiesCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/kill bill.PNG" class="d-block w-100 square-image" alt="Kill Bill" data-toggle="tooltip" title="Un design originale ispirato al film cult di Quentin Tarantino">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Un design originale ispirato al film cult di Quentin Tarantino</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/david bowie.jpeg" class="d-block w-100 square-image" alt="jeans David Bowie" data-toggle="tooltip" title="Un tributo al leggendario musicista David Bowie.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Un tributo al leggendario musicista David Bowie.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/hobby3.jpg" class="d-block w-100 square-image" alt="Pulp Fiction" data-toggle="tooltip" title="Descrizione del hobby 3.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Descrizione del hobby 3.</p>
+                        </div>
+                    </div>
+                    <!-- Aggiungi altre immagini dei tuoi hobby qui -->
                 </div>
-                <div class="hobby-item">
-                    <img src="assets/img/hobby2.jpg" alt="Hobby 2">
-                    <p>Descrizione del hobby 2.</p>
-                </div>
-                <div class="hobby-item">
-                    <img src="assets/img/hobby3.jpg" alt="Hobby 3">
-                    <p>Descrizione del hobby 3.</p>
-                </div>
-                <!-- Aggiungi altre immagini dei tuoi hobby qui -->
+                <a class="carousel-control-prev" href="#hobbiesCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#hobbiesCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </section>
-
         <section class="follow-us">
             <h2>Seguimi sui miei canali creativi!</h2>
             <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
             <div class="social-links">
-                <a href="https://www.tiktok.com/@tuo_username" target="_blank">
+                <a href="https://www.tiktok.com/@laguerradeibottonilab?_t=8fuYu39oum1&_r=1" target="_blank">
                     <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon">
                 </a>
-                <a href="https://www.instagram.com/tuo_username/" target="_blank">
+                <a href="https://www.instagram.com/laguerradeibottonilab/" target="_blank">
                     <img src="assets/img/instagramcreativo.png" alt="Instagram" class="social-icon">
                 </a>
             </div>
@@ -103,7 +119,14 @@
     <footer>
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
-
     <script src="assets/JS/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip(); 
+    });
+</script>
 </body>
 </html>
