modifica contact e styles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                     <div class="carousel-item">
                         <img src="assets/img/hobby3.jpg" class="d-block w-100 square-image" alt="Pulp Fiction" data-toggle="tooltip" title="Descrizione del hobby 3.">
                     </div>
-                    <!-- Aggiungi altre immagini dei tuoi hobby qui -->
+                    <div class="carousel-item">
+                        <img src="assets/img/hobby3.jpg" class="d-block w-100 square-image" alt="Pulp Fiction" data-toggle="tooltip" title="Descrizione del hobby 3.">
+                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#hobbiesCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
