--- a/index.html
+++ b/index.html
@@ -70,31 +70,50 @@
         <section class="hobbies">
             <h2>I miei hobby</h2>
             <p>Oltre a dedicarmi alla programmazione, mi dedico a diversi hobby che alimentano la mia creatività e passione.</p>
-            <div id="hobbiesCarousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="assets/img/kill bill.PNG" class="d-block w-100 square-image" alt="Kill Bill" data-toggle="tooltip" title="Un design originale ispirato al film cult di Quentin Tarantino">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/david bowie.jpeg" class="d-block w-100 square-image" alt="jeans David Bowie" data-toggle="tooltip" title="Un tributo al leggendario musicista David Bowie.">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/hobby3.jpg" class="d-block w-100 square-image" alt="Pulp Fiction" data-toggle="tooltip" title="Descrizione del hobby 3.">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/hobby3.jpg" class="d-block w-100 square-image" alt="Pulp Fiction" data-toggle="tooltip" title="Descrizione del hobby 3.">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#hobbiesCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#hobbiesCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+
+            <div class="gallery">
+                <figure>
+                    <img src="assets/img/felpa-pulpfiction.PNG" alt="Felpa con illustrazione di pulp fiction">
+                    <figcaption>Felpa con illustrazione di Pulp Fiction</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/david bowie.jpeg" alt="Tasca jeans pitturata a tema David Bowie">
+                    <figcaption>Tasca jeans pitturata a tema David Bowie</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/body-ricamato.JPG" alt="Body ricamato a tema Harry Potter">
+                    <figcaption>Body ricamato a tema Harry Potter</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/felpa-miawallace.PNG" alt="Felpa con illustrazione di Mia Wallace da Pulp Fiction">
+                    <figcaption>Felpa con illustrazione di Mia Wallace da Pulp Fiction</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/urlo-munch.jpeg" alt="Tasca jeans ricamata con l'Urlo di Munch">
+                    <figcaption>Tasca jeans ricamata con l'Urlo di Munch</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/pochette.jpg" alt="Pochette pitturata con le cattive della Disney">
+                    <figcaption>Pochette pitturata con le cattive della Disney</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/kill bill.PNG" alt="Felpa con illustrazione di Kill Bill">
+                    <figcaption>Felpa con illustrazione di Kill Bill</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/scarpette.jpg" alt="Scarpette dipinte a mano per neonato">
+                    <figcaption>Tasca jeans ricamata con l'Urlo di Munch</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/carica101.jpg" alt="Pochette pitturata a mano la carica dei 101">
+                    <figcaption>Pochette pitturata con le cattive della Disney</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/sailormoon.jpg" alt="Giubbino in jeans dipinto a tema Sailor Moon">
+                    <figcaption>Felpa con illustrazione di Kill Bill</figcaption>
+                </figure>
             </div>
-        </section>
+            
         <section class="follow-us">
             <h2>Seguimi sui miei canali creativi!</h2>
             <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
@@ -113,13 +132,5 @@
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
     <script src="assets/JS/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip(); 
-    });
-</script>
 </body>
 </html>
