--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </figure>
                 <figure>
                     <img src="assets/img/carica101.jpg" alt="Pochette pitturata a mano la carica dei 101">
-                    <figcaption>Pochette pitturata con le cattive della Disney</figcaption>
+                    <figcaption>Pochette pitturata a tema la carica dei 101!</figcaption>
                 </figure>
                 <figure>
                     <img src="assets/img/sailormoon.jpg" alt="Giubbino in jeans dipinto a tema Sailor Moon">
