--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 <body>
     <header>
-        <nav>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul>
+            <nav>
+             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">I miei progetti</a></li>
                 <li><a href="contact.html">Contatti</a></li>
@@ -69,7 +69,7 @@
         </section>
         <section class="hobbies">
             <h2>I miei hobby</h2>
-            <p>Oltre a dedicarmi alla programmazione, mi dedico a diversi hobby che alimentano la mia creatività e passione.</p>
+            <p>Oltre a dedicarmi alla programmazione, mi dedico a diversi hobby che alimentano la mia creatività e passione come la pittura, il ricamo e la creazione di illustrazioni.</p>
 
             <div class="gallery">
                 <figure>
@@ -102,7 +102,7 @@
                 </figure>
                 <figure>
                     <img src="assets/img/scarpette.jpg" alt="Scarpette dipinte a mano per neonato">
-                    <figcaption>Tasca jeans ricamata con l'Urlo di Munch</figcaption>
+                    <figcaption>Scarpette per neonato dipinte a mano</figcaption>
                 </figure>
                 <figure>
                     <img src="assets/img/carica101.jpg" alt="Pochette pitturata a mano la carica dei 101">
@@ -116,7 +116,8 @@
             
         <section class="follow-us">
             <h2>Seguimi sui miei canali creativi!</h2>
-            <p>Segui il mio viaggio su TikTok e Instagram per contenuti esclusivi e aggiornamenti.</p>
+            <p>Non perdere neanche un contenuto esclusivo dei miei lavori handmade!
+                 Seguimi su TikTok e Instagram per aggiornamenti, tutorial, e dietro le quinte delle mie creazioni uniche.</p>
             <div class="social-links">
                 <a href="https://www.tiktok.com/@laguerradeibottonilab?_t=8fuYu39oum1&_r=1" target="_blank">
                     <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon">
