--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <section class="SKILLS">
             <h2>Skills</h2>
             <div class="skills-container">
-                <div class="skill-item"><img src="assets/img/sass.png" alt="Skill 1"></div>
-                <div class="skill-item"><img src="assets/img/git.png" alt="Skill 2"></div>
-                <div class="skill-item"><img src="assets/img/bootstrap.png" alt="Skill 3"></div>
-                <div class="skill-item"><img src="assets/img/html.png" alt="Skill 4"></div>
-                <div class="skill-item"><img src="assets/img/CSS.png" alt="Skill 5"></div>
-                <div class="skill-item"><img src="assets/img/github.png" alt="Skill 6"></div>
+                <div class="skill-item"><img src="assets/img/sass.png" alt="Sass"></div>
+                <div class="skill-item"><img src="assets/img/git.png" alt="Git"></div>
+                <div class="skill-item"><img src="assets/img/bootstrap.png" alt="Bootstrap"></div>
+                <div class="skill-item"><img src="assets/img/html.png" alt="Html"></div>
+                <div class="skill-item"><img src="assets/img/CSS.png" alt="Css"></div>
+                <div class="skill-item"><img src="assets/img/github.png" alt="Github"></div>
             </div>
         </section>
         <section class="hobbies">
