titolo formazione e competenze in index

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
     
         <section class="images">
+            <h2>Formazione e Competenze</h2>
             <img src="assets/img/education.png" alt="education" class="extra-image">
             <img src="assets/img/abilità-personali.png" alt="abilita" class="extra-image">
         </section>
