modifica titolo formazione e competenze

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     
         <div class="images">
-            <h2>Images</h2>
+            <h2>Formazione e Competenze</h2>
             <img src="assets/img/education.png" alt="education" class="extra-image" loading="lazy">
             <img src="assets/img/abilità-personali.png" alt="abilita" class="extra-image" loading="lazy">
         </div>
@@ -126,7 +126,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
