--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <li><a href="portfolio.html">I miei progetti</a></li>
                 <li><a href="contact.html">Contatti</a></li>
             </ul>
-            <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
+            <a href="assets/files/BaliaKatiuscia-juniorfullstackdeveloper.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
     </header>
     
@@ -40,6 +40,7 @@
     </main>
 
         <section class="social">
+            <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
             <div class="social-container">
                 <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
                 <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
