--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <li><a href="portfolio.html">I miei progetti</a></li>
                 <li><a href="contact.html">Contatti</a></li>
             </ul>
-            <a href="assets/files/Balia Katiuscia-junior full stack developer.pdf" class="btn-download" download>Scarica CV</a>
+            <a href="assets/files/BaliaKatiuscia-juniorfullstackdeveloper.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
     </header>
     <main>
