--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Il mio sito web">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
+    <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
+    <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/CSS/contact.css">
     <title>Contatti - Balia Katiuscia</title>
