rimozione di alcune immagini

--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@
     
             <div class="gallery">
                 <figure>
-                    <img src="assets/img/felpa-pulpfiction.PNG" alt="Felpa con illustrazione di pulp fiction" loading="lazy">
-                    <figcaption>Felpa con illustrazione di Pulp Fiction</figcaption>
-                </figure>
-                <figure>
                     <img src="assets/img/davidbowie.jpeg" alt="Tasca jeans pitturata a tema David Bowie" loading="lazy">
                     <figcaption>Tasca jeans pitturata a tema David Bowie</figcaption>
                 </figure>
@@ -83,12 +79,8 @@
                     <figcaption>Body ricamato a tema Harry Potter</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/img/felpa-miawallace.PNG" alt="Felpa con illustrazione di Mia Wallace da Pulp Fiction" loading="lazy">
-                    <figcaption>Felpa con illustrazione di Mia Wallace da Pulp Fiction</figcaption>
-                </figure>
-                <figure>
-                    <img src="assets/img/urlo-munch.jpeg" alt="Tasca jeans ricamata con l'Urlo di Munch" loading="lazy">
-                    <figcaption>Tasca jeans ricamata con l'Urlo di Munch</figcaption>
+                    <img src="assets/img/borsa.jpg" alt="Borsa con illustrazione di Mia Wallace da Pulp Fiction" loading="lazy">
+                    <figcaption>Borsa con illustrazione di Mia Wallace da Pulp Fiction</figcaption>
                 </figure>
                 <figure>
                     <img src="assets/img/pochette.jpg" alt="Pochette pitturata con le cattive della Disney" loading="lazy">
@@ -97,18 +89,6 @@
                 <figure>
                     <img src="assets/img/killbill.PNG" alt="Felpa con illustrazione di Kill Bill" loading="lazy">
                     <figcaption>Felpa con illustrazione di Kill Bill</figcaption>
-                </figure>
-                <figure>
-                    <img src="assets/img/scarpette.jpg" alt="Scarpette dipinte a mano per neonato" loading="lazy">
-                    <figcaption>Scarpette per neonato dipinte a mano</figcaption>
-                </figure>
-                <figure>
-                    <img src="assets/img/carica101.jpg" alt="Pochette pitturata a mano la carica dei 101" loading="lazy">
-                    <figcaption>Pochette pitturata a tema la carica dei 101!</figcaption>
-                </figure>
-                <figure>
-                    <img src="assets/img/sailormoon.jpg" alt="Giubbino in jeans dipinto a tema Sailor Moon" loading="lazy">
-                    <figcaption>Giubbino in jeans dipinto a tema Sailor Moon</figcaption>
                 </figure>
             </div>
         </section>
