--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/CSS/contact.css">
-    <title>Contatti - Balia Katiuscia</title>
+    <title>Contatti-Balia Katiuscia</title>
 </head>
 <body>
     <header>
@@ -44,15 +44,15 @@
         </section>
     </main>
 
-        <section class="social">
-            <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
-            <div class="social-container">
-                <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact"></a>
-                <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github"></a>
-                <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram"></a>
-            </div>
-        </section>
+    <section class="social">
+        <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
+        <div class="social-container">
+            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact" loading="lazy"></a>
+            <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github" loading="lazy"></a>
+            <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn" loading="lazy"></a>
+            <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram" loading="lazy"></a>
+        </div>
+    </section>
     
     <footer>
         <p>&copy; 2024 sito web di Balia Katiuscia. Tutti i diritti riservati.</p>
