modifiche per velocizzare caricamento pagine

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/CSS/contact.css">
+    <link rel="preload" href="assets/CSS/contact.css" as="style">
     <title>Contatti-Balia Katiuscia</title>
 </head>
 <body>
