--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="preload" href="assets/CSS/styles.css" as="style">
     <title>Balia Katiuscia</title>
 </head>
 <body>
