--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
     <title>Il mio portfolio</title>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/SCSS/portfolio.css">
+    <link rel="preload" href="assets/SCSS/portfolio.css" as="style">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
 </head>
